:ambulance: Fix the alignment failure of 'available space amount info' element.

--- a/t_system/remote_ui/www/static/resources/css/system_info.css
+++ b/t_system/remote_ui/www/static/resources/css/system_info.css
@@ -26,9 +26,9 @@
     visibility: hidden;
     opacity: 0;
 
-    top: 57%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%, -50%);
 }
 
 #disk_usage_div p {
